--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
+//apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdk 32
+
     defaultConfig {
         applicationId "io.github.oniatsu.fragmentstack.sample"
-        minSdkVersion 23
-        targetSdkVersion 25
+        minSdk 21
+        targetSdk 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,15 +27,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    dataBinding {
-        enabled = true
+    buildFeatures{
+        viewBinding true
+        dataBinding true
     }
     lintOptions {
         abortOnError false
         checkReleaseBuilds false
-    }
-    dexOptions {
-        maxProcessCount 1
     }
 }
 //    apt {
@@ -45,24 +43,13 @@ android {
 //    }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:25.1.1'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    compile 'io.reactivex.rxjava2:rxjava:2.0.5'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.annimon:stream:1.1.5'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    compile 'com.f2prateek.dart:dart:2.0.1'
-    provided 'com.f2prateek.dart:dart-processor:2.0.1'
-    compile 'com.f2prateek.dart:henson:2.0.1'
-    provided 'com.f2prateek.dart:henson-processor:2.0.1'
-
-    compile project(path: ':fragmentstack')
-//    compile 'io.github.oniatsu:fragment-pager:0.1.0'
+    implementation project(path: ':fragmentstack')
 }
