--- a/fragmentstack/build.gradle
+++ b/fragmentstack/build.gradle
@@ -1,24 +1,28 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdk 32
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 25
+        minSdk 21
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     lintOptions {
         abortOnError false
@@ -26,19 +30,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
-publish {
-    userOrg = 'oniatsu'
-    groupId = 'io.github.oniatsu'
-    artifactId = 'fragment-stack'
-    publishVersion = "0.1.0"
-    desc = 'Using fragment to page easily. And Supplying page fragment life cycles.'
-    website = 'https://github.com/oniatsu'
-}
+//publish {
+//    userOrg = 'oniatsu'
+//    groupId = 'io.github.oniatsu'
+//    artifactId = 'fragment-stack'
+//    publishVersion = "0.1.0"
+//    desc = 'Using fragment to page easily. And Supplying page fragment life cycles.'
+//    website = 'https://github.com/oniatsu'
+//}
